<?xml version="1.0"?>
<package format="2">
  <name>grid_map_planner_lib</name>
  <version>0.0.0</version>
  <description>The grid_map_planner_lib package</description>

  <maintainer email="kohlbrecher@sim.tu-darmstadt.de">Stefan Kohlbrecher</maintainer>


  <license>BSD</license>


  <buildtool_depend>catkin</buildtool_depend>
  <depend>geometry_msgs</depend>
  <depend>grid_map_core</depend>
  <depend>grid_map_cv</depend>
  <depend>grid_map_msgs</depend>
  <depend>grid_map_ros</depend>
  <depend>grid_map_proc</depend>
  <depend>nav_msgs</depend>
  <depend>roscpp</depend>

  <export>
  </export>
</package>
